--- a/style.css
+++ b/style.css
@@ -26,11 +26,17 @@ body{
 
 header.navbar{
     background-color: #EA542D;
-    padding: 25px 0;
+    padding: 15px 0;
 }
 
 .navbar img{
     max-height: 60px;
+}
+
+nav .nav-pills .nav-link{
+    color: white;
+    font-size: 130%;
+    font-weight: bolder;
 }
 
 nav .nav-pills .nav-link:hover{
@@ -55,14 +61,11 @@ nav .nav-pills .nav-link.active{
     box-shadow: none;
 }
 
-.custom-toggler.navbar-toggler {
-    border-color: rgb(255,102,203);
-} 
+#praia #carousel{
+}
 
-header .container nav ul li a{
-    font-size: 130%;
-    font-weight: bolder;
-    color: white;
+#praia #carousel .carousel-item img{
+    height: 80vh;
 }
 
 h2{
@@ -70,12 +73,6 @@ font-weight: bold;
 font-size: 50px;    
 margin: 40px 0px 40px 70px;
 color: #EA542D;
-}
-
-#praia img{
-    width: 100%;
-    border-radius: 40px;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
 }
 
 #lockers .container{
